# libGroomRL

./: CMakeLists.txt  README.md  environment.yml
example/: CMakeLists.txt  test.cc
examples/: Makefile  example.cc
src/: build.py  cgroomrl.cc  groomrl.cc  groomrl.pc.in  wrapper.py
src/groomrl/: cgroomrl.h  groomrl.cc  groomrl.h
